# telemost-recorder

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
providers/: __init__.py  registry.py
providers/telemost/: __init__.py  audio_inject.js  browser.py  provider.py  selectors.py
scripts/: dev-gateway.sh  dev-tg-bot.sh  dev-transcriber.sh  install-playwright.sh
services/: __init__.py
services/gateway/: __init__.py  __main__.py  app.py  auth.py  db.py  deps.py  schemas.py
services/gateway/queues/: __init__.py
services/gateway/routers/: sessions.py
services/gateway/services/: __init__.py  event_listener.py  llm_postprocess.py  notifier.py  retention_sweeper.py  scheduler.py  session_fsm.py  session_service.py  worker_manager.py
services/meeting_worker/: __init__.py  __main__.py  runner.py
services/tg_bot/: __init__.py  __main__.py  bot.py  middleware.py  notifications.py
services/transcriber/: __init__.py  __main__.py  engine.py  runner.py
shared/: __init__.py
shared/audio/: __init__.py  wav_sink.py
shared/config/: settings.py
shared/contracts/: __init__.py  meeting.py  postprocess.py  session.py  storage.py  transcription.py
shared/db/: __init__.py  models.py
shared/queues/: __init__.py  session_queue.py
shared/storage/: __init__.py  local.py
tests/: test_cancel_fsm.py  test_gateway_api.py  test_llm_postprocess.py  test_notification_message.py  test_registry.py  test_schedule_parse.py  test_session_fsm.py  test_session_queue.py  test_transcriber_engine.py
(+8 files in other folders)
