[project]
name = "telemost-recorder"
version = "0.1.0"
description = "Telemost meeting recorder with Telegram control and Whisper transcription"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
gateway = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "redis>=5.0",
    "httpx>=0.27",
    "apscheduler>=3.10",
]
tg-bot = [
    "aiogram>=3.13",
    "httpx>=0.27",
]
meeting-worker = [
    "playwright>=1.49",
    "redis>=5.0",
]
transcriber = [
    "faster-whisper>=1.0",
    "redis>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]
all = [
    "telemost-recorder[gateway,tg-bot,meeting-worker,transcriber,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "providers", "services"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
packages = ["shared", "providers", "services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
